# ros-workshop

./: CMakeLists.txt  README.md  package.xml  setup.bash  setup.sh  todo.md
include/: AscendDrone.hpp
launch/: mavros.launch  nodes.launch  run_nodes.launch  simulator.launch
src/: AscendDrone.cpp  AscendDrone.hpp  ai.py  ai.py.bak  ai1.py  ai2.py  ai3.py  ai_node.cpp  control.cpp  control.py  control.py.bak  control1.cpp  control_node.cpp  perception.cpp  perception.py  perception.py.bak  perception1.cpp  perception2.cpp  perception_node.cpp
src/example_solutions/: ai.py
src/simulator/: box.sdf  box.urdf  drone_controller.cc  drone_props.cc  fake_mavros.cpp  gazebo_version_defines.h  simulator.py
src/simulator/models/drone/: drone.sdf  model.config
src/simulator/models/rotors_description/urdf/: .multirotor_base.xacro.swp
srv/: FlyCommand.srv
